--- a/.eslintrc
+++ b/.eslintrc
@@ -22,6 +22,8 @@
         "no-undef": "warn",
         "no-unused-vars": "warn",
         "no-unused-expressions": "warn",
-        "react/prop-types": "warn"
+        "react/prop-types": "off",
+        "react/jsx-uses-vars": "error",
+        "react/jsx-uses-react": "error"
     }
 }
